--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-output_folder:  analysis_output
-samples:        metadata/samples.csv
+output_folder:  pangenome_variations_small
+samples:        metadata/samples_small.csv
 flank_length:   50
 varifier_image: docker://leandroishilima/varifier:pandora_paper_tag1
