--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,79 @@
 appdirs==1.4.3
+argon2-cffi==20.1.0
 attrs==19.3.0
+backcall==0.2.0
+bleach==3.1.5
 certifi==2020.4.5.1
+cffi==1.14.2
 chardet==3.0.4
 ConfigArgParse==1.2.3
 datrie==0.8.2
 decorator==4.4.2
+defusedxml==0.6.0
 docutils==0.16
+entrypoints==0.3
 gitdb==4.0.4
 GitPython==3.1.1
 idna==2.9
 importlib-metadata==1.6.0
+ipykernel==5.3.4
+ipython==7.17.0
 ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jedi==0.17.2
+Jinja2==2.11.2
 jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.6
+jupyter-console==6.1.0
 jupyter-core==4.6.3
+MarkupSafe==1.1.1
+mistune==0.8.4
 more-itertools==8.2.0
+nbconvert==5.6.1
 nbformat==5.0.6
 networkx==2.4
+notebook==6.1.3
 numpy==1.18.4
 packaging==20.3
 pandas==1.0.3
+pandocfilters==1.4.2
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+plotly==4.9.0
 pluggy==0.13.1
+prometheus-client==0.8.0
+prompt-toolkit==3.0.6
 psutil==5.7.0
+ptyprocess==0.6.0
 py==1.8.1
+pycparser==2.20
+Pygments==2.6.1
 pyparsing==2.4.7
 pyrsistent==0.16.0
 pytest==5.4.1
 python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.3.1
+pyzmq==19.0.2
+qtconsole==4.7.6
+QtPy==1.9.0
 ratelimiter==1.2.0.post0
 requests==2.23.0
+retrying==1.3.3
+Send2Trash==1.5.0
 six==1.14.0
 smmap==3.0.2
 snakemake==5.22.1
+terminado==0.8.3
+testpath==0.4.4
 toposort==1.5
+tornado==6.0.4
 traitlets==4.3.3
 urllib3==1.25.9
 wcwidth==0.1.9
+webencodings==0.5.1
+widgetsnbextension==3.5.1
 wrapt==1.12.1
 zipp==3.1.0
