--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ jupyter==1.0.0
 jupyter-client==6.1.6
 jupyter-console==6.1.0
 jupyter-core==4.6.3
+kaleido==0.0.3
 MarkupSafe==1.1.1
 mistune==0.8.4
 more-itertools==8.2.0
