--- a/config.pandora_paper_tag1.4way_new_basecall.yaml
+++ b/config.pandora_paper_tag1.4way_new_basecall.yaml
@@ -1,4 +1,4 @@
-output_folder:  output_pangenome_variations_pandora_paper_tag1_4way_old_basecall
-samples:        metadata/samples.pandora_paper_tag1.4way_old_basecall.csv
+output_folder:  output_pangenome_variations_pandora_paper_tag1_4way_new_basecall
+samples:        metadata/samples.pandora_paper_tag1.4way_new_basecall.csv
 flank_length:   50
 varifier_image: docker://leandroishilima/varifier:pandora_paper_tag1
