--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,11 @@ argon2-cffi==20.1.0
 attrs==19.3.0
 backcall==0.2.0
 bleach==3.1.5
-certifi==2020.4.5.1
+certifi==2020.6.20
 cffi==1.14.2
 chardet==3.0.4
 ConfigArgParse==1.2.3
+cycler==0.10.0
 datrie==0.8.2
 decorator==4.4.2
 defusedxml==0.6.0
@@ -28,7 +29,9 @@ jupyter-client==6.1.6
 jupyter-console==6.1.0
 jupyter-core==4.6.3
 kaleido==0.0.3
+kiwisolver==1.2.0
 MarkupSafe==1.1.1
+matplotlib==3.3.2
 mistune==0.8.4
 more-itertools==8.2.0
 nbconvert==5.6.1
@@ -42,6 +45,7 @@ pandocfilters==1.4.2
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==7.2.0
 plotly==4.9.0
 pluggy==0.13.1
 prometheus-client==0.8.0
@@ -63,6 +67,8 @@ QtPy==1.9.0
 ratelimiter==1.2.0.post0
 requests==2.23.0
 retrying==1.3.3
+scipy==1.5.2
+seaborn==0.11.0
 Send2Trash==1.5.0
 six==1.14.0
 smmap==3.0.2
