--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ eda/plot_pangenome_variants_vs_samples/pangenome_variations_per_nb_of_samples.cs
 eda/plot_pangenome_variants_vs_samples/pangenome_variations_per_nb_of_samples.png
 
 output_pangenome_variations_small/
+
+eda/plot_two_SNP_heatmap/.ipynb_checkpoints/
